remove virtual threads from tests